Fix spacing around text-inputs and fix hover color on buttons

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -33,6 +33,11 @@ $mobile-break-point: 640px;
 
 a.uikit-btn {
   color: #fff;
+
+  &:hover,
+  &:focus {
+    background-color: $uikit-colour-Primary--30;
+  }
 }
 
 .uikit-btn {
